# flutter_strophe

./: .bazelrc  WORKSPACE.bazel
expat/: BUILD.bazel  BUILD.expat.bazel  expat_example.c  sample.xml
libstrophe/: BUILD.bazel  BUILD.libstrophe.bazel  README.md  basic_example.c
