load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_test")

exports_files(
    [
        "BUILD.libstrophe.bazel",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "basic_example",
    srcs = ["basic_example.c"],
    linkopts = [
        "-undefined",
        "dynamic_lookup",
    ],
    includes = ["@libstrophe://src"],
    deps = [
        "@expat",
        "@libstrophe",
        "@openssl",
    ],
)

cc_binary(
    name = "complex_example",
    srcs = ["complex_example.c"],
    linkopts = [
        "-undefined",
        "dynamic_lookup",
    ],
    includes = ["@libstrophe://src"],
    deps = [
        "@expat",
        "@libstrophe",
        "@openssl",
    ],
)

build_test(
    name = "basic_example_build_test",
    targets = [
        ":basic_example",
    ],
    visibility = ["//:__pkg__"],
)

build_test(
    name = "complex_example_build_test",
    targets = [
        ":complex_example",
    ],
    visibility = ["//:__pkg__"],
)

build_test(
    name = "build_test",
    targets = [
        "@libstrophe//:libstrophe",
    ],
    visibility = ["//:__pkg__"],
)

test_suite(
    name = "libstrophe_test_suite",
    tests = [
        ":build_test",
        ":basic_example_build_test",
        ":complex_example_build_test",
    ],
    visibility = ["//:__pkg__"],
)
